--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,7 @@ jobs:
         id: print_commits
         run: |
           echo ${{github.event.commits[0].message}}
+          echo ${{github.event.head_commit.message}}
           echo ${{github.event.commits[-1].message}}
           echo ${{github.event.commits[-2].message}}
           echo ${{github.event.commits}}
